# scraper-rs

./: AGENT.md  Cargo.toml  README.md  justfile  pyproject.toml  scraper_rs.pyi
.github/workflows/: benchmark.yml  bump-version.yml  release.yml  tests.yml
benchmarks/: README.md  bench_sync_async.py
examples/: demo.py  demo_asyncio.py
scraper_rs/: asyncio.py  asyncio.pyi
src/: lib.rs
tests/: test_asyncio.py  test_scraper.py
