[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "scraper-rs"
version = "0.1.0"
description = "Python bindings around rust-scraper/scraper with PyO3"
authors = [{ name = "Yehor Smoliakov", email = "egorsmkv@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = ["maturin", "pytest"]

[tool.maturin]
bindings = "pyo3"
strip = true
profile = "release"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
